Use openjdk:15-alpine as base image